bb-timeline-module/css/frontend.css
/*main heading align*/
.header-title.bb-heading-left {
    text-align: left;
}

.header-title.bb-heading-center {
    text-align: center;
}

.header-title.bb-heading-right{
    text-align: right;
}
/*main heading align /.*/

/*-----------------------------Common-CSS-Start---------------------------------------*/
.bb-tmtimeline {
    margin: 30px 0 0 0 !important;
    padding: 0;
    list-style: none !important;
    position: relative;
} 
.bb-tmtimeline > li .bb-tmlabel .bb-timline-title { 
	margin-top: 0px;
	padding: 0 0 10px 0;
	border-bottom: 1px solid rgba(255,255,255,0.4);
}
.bb-tmtimeline > li {
	position: relative;
	margin: 0 !important;
}

.bb-tmicon i {
    vertical-align: middle;
}

.bb-timline-heading {
    display: inline-block;
}

.bb-tmtime span {
    display: inline-block;
}
/*-----------------------------Common-CSS-Ends---------------------------------------*/

/*-----------------------------Timeline-Layout-Right-Start----------------------------*/
/* The line */
.bb-timeline-right .bb-tmtimeline:before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    width: 10px;
    left: 20%;
    margin-left: -10px;
}

/* The date/time */
.bb-timeline-right .bb-tmtimeline > li .bb-tmtime {
	display: block;
	width: 25%;
	padding-right: 100px;
	position: absolute;
}

.bb-timeline-right .bb-tmtimeline > li .bb-tmtime span {
	display: inline-block;
	text-align: right;
}

/* Right content */
.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel {
	margin: 0 0 30px 25%;
	color: #fff;
	padding: 2em;
	font-size: 1.2em;
	font-weight: 300;
	line-height: 1.4;
	position: relative;
	border-radius: 5px;
}

.bb-timeline-right .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel {
	/*background: #6cbfee;*/
}

/* The triangle */
.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel:after {
	right: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-width: 10px;
	top: 10px;
}

.bb-timeline-right .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
	/*border-right-color: #6cbfee;*/
}

/* The icons */
.bb-timeline-right .bb-tmtimeline > li .bb-tmicon {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    font-size: 1.4em;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    left: 20%;
    top: 0;
    margin: 0 0 0 -25px;
}

.bb-timeline-right .bb-tm-title-left {
    text-align: left;
}

.bb-timeline-right .bb-tm-title-center {
    text-align: center;
}

.bb-timeline-right .bb-tm-title-right{
    text-align: right;
}
/*-----------------------------Timeline-Layout-RIGHT-End----------------------------*/

/*-----------------------------Timeline-Layout-LEFT-Start-------------------------*/

.bb-timeline-left .bb-tmtimeline:before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    width: 10px;
    right: 20%;
    margin-right: -10px;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmtime {
    display: block;
    width: 25%;
    padding-left: 100px;
    position: absolute;
    right: 0;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmicon {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    font-size: 1.4em;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    right: 20%;
    top: 0;
    margin: 0 -25px 0 0;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel {
    margin: 0 25% 30px 0;
    color: #fff;
    padding: 2em;
    font-size: 1.2em;
    font-weight: 300;
    line-height: 1.4;
    position: relative;
    border-radius: 5px;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel:after {
    left: 100%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-width: 10px;
    top: 10px;
}
/*-----------------------------Timeline-Layout-RIGHT-End----------------------------*/

/*-----------------------------Timeline-Layout-BOTH-Start----------------------------*/

.bb-timeline-both .bb-tmtimeline:before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    width: 10px;
    right: 0;
    left: 0;
    margin: 0 auto;
}
.bb-timeline-both .bb-tmtimeline > li .bb-tmicon {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    font-size: 1.4em;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    right: 0;
    left: 0;
    top: 0;
    margin: 0 auto;
}

.bb-timeline-both .bb-tmtimeline > li .bb-tmtime {
    display: block;
    width: 25%;
    padding: 0;
    position: absolute;
    right: 0;
    left: 0;
    margin: 0 auto;
}

.bb-timeline-both .bb-tmtimeline > li .bb-tmlabel {
    margin: 0 0 30px 55%;
    color: #fff;
    padding: 2em;
    font-size: 1.2em;
    font-weight: 300;
    line-height: 1.4;
    position: relative;
    border-radius: 5px;
}

.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel {
    margin: 0 55% 30px 0;
}

.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
    border-right-color: transparent;
    right: 0;
    left: 100%;
}

.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmtime {
    right: 0;
    left: auto;
}

.bb-timeline-both .bb-tmtimeline > li .bb-tmtime {
    display: block;
    width: 45%;
    padding: 0;
    position: absolute;
    right: auto;
    left: 0;
    text-align: right;
}

.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmtime {
    text-align: left;
}

.bb-timeline-both .bb-tmtimeline > li .bb-tmlabel:after {
    right: 100%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-width: 10px;
    top: 10px;
}

.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
    border-right-color: transparent;
    right: 0;
    left: 100%;
}
/*-----------------------------Timeline-Layout-BOTH-End----------------------------*/

/* Example Media Queries */
@media screen and (max-width: 1024px) {

	.bb-tmtimeline > li .bb-tmtime span:last-child {
		font-size: 1.5em;
	}
}

@media screen and (max-width: 768px) {
	/*right responsive*/
	.bb-tmtimeline:before {
		display: none;
	}

	.bb-timeline-right .bb-tmtimeline > li .bb-tmtime {
		width: 100%;
		position: relative;
		padding: 0 0 20px 0;
	}

	.bb-timeline-right .bb-tmtimeline > li .bb-tmtime span {
		text-align: left;
	}

	.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel {
		margin: 0 0 30px 0;
		padding: 1em;
		font-weight: 400;
		font-size: 95%;
	}

	.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel:after {
		right: auto;
		left: 20px;
		border-right-color: transparent;
		top: -20px;
	}

	.bb-timeline-right .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
		border-right-color: transparent;
	}

	.bb-timeline-right .bb-tmtimeline > li .bb-tmicon {
		position: relative;
		float: right;
		left: auto;
		margin: -55px 5px 0 0px;
	}

	/*left responsive*/
	.bb-timeline-left .bb-tmtimeline > li .bb-tmtime {
	    width: 100%;
	    position: relative;
	    padding: 0 0 20px 0;
	}

	.bb-timeline-left .bb-tmtimeline > li .bb-tmtime span {
	    text-align: left;
	}

	.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel {
	    margin: 0 0 40px 0;
	    padding: 1em;
	    font-weight: 400;
	    font-size: 95%;
	}

	.bb-timeline-left .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
		border-left-color: transparent;
	}
	.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel:after{
		right: auto;
    	left: 20px;
    	border-left-color: transparent;
    	top: -20px;
	}

	.bb-timeline-left .bb-tmtimeline > li .bb-tmicon {
	    position: relative;
	    float: right;
	    left: auto;
	    right: 0;
	    margin: -55px 5px 0 0px;
	}

	/*both responsive*/
	.bb-timeline-both .bb-tmtimeline > li .bb-tmtime {
	    width: 100%;
	    position: relative;
	    padding: 0 0 20px 0;
	}

	.bb-timeline-both .bb-tmtimeline > li .bb-tmtime span {
	    text-align: left;
	}
	.bb-timeline-both .bb-tmtimeline > li .bb-tmtime{
		text-align: left;
	}

	.bb-timeline-both .bb-tmtimeline > li .bb-tmlabel {
	    margin: 0 0 40px 0;
	    padding: 1em;
	    font-weight: 400;
	    font-size: 95%;
	}

	.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel {
	    margin: 1px 0 40px 0;
	}

	.bb-timeline-both .bb-tmtimeline > li:nth-child(odd) .bb-tmlabel:after {
	    border-left-color: transparent;
	    right: auto;
	    left: 20px;
	    top: -20px;
	}
	.bb-timeline-both .bb-tmtimeline > li .bb-tmlabel:after{
		right: auto;
	    left: 20px;
	    border-right-color: transparent;
	    top: -20px;
	}

	.bb-timeline-both .bb-tmtimeline > li .bb-tmicon {
	    position: relative;
	    float: right;
	    left: auto;
	    right: 0;
	    margin: -55px 5px 0 0px;
	}	
}

